Fix shortcut box display on Firefox

--- a/src/component/pagestrategy/StrategieNational.css
+++ b/src/component/pagestrategy/StrategieNational.css
@@ -12,14 +12,18 @@
 }
 
 .StrategieNational-shortcut-box {
-	border: solid 5px #009fe3;
+	border: solid 2px #009fe3;
 	box-shadow: rgba(0, 0, 0, 0.19) -20px 20px 20px, rgba(0, 0, 0, 0.23) -6px 6px 6px;
-	padding: 15px 40px;
-	zoom: 35%;
+	padding: 10px;
 }
 
 .StrategieNational-shortcut-box h2 {
 	cursor: pointer;
+	padding: 0px 10px 0px 25px !important;
+	margin: 15px 0px 10px 0px !important;
+	background-size: 20px 20px !important;
+	min-height: 25px;
+	font-size: 14px !important;
 }
 
 .StrategieNational-shortcut-box h2:hover {
